# sparkling

./: .gitignore  README.md  dune-project  index.html  sparkling.js  sparkling.opam
.github/workflows/: pages.yml
article/: Makefile  article.tex  macros.sty  prog.agda  test.agda
article/agda/: Base.agda  Equality.agda  InfLattice.agda  Interval.agda  Lattice.agda  Logic.agda  LowerComplement.agda  Makefile  Order.agda  Parallel.agda  Program.agda  SupLattice.agda  removed.agda
article/old/: prog-notrans.agda  prog-trans.agda
src/: .gitignore  AI.ml  Makefile  common.ml  dune  frontend.ml  kiss.sparkling  lang.ml  lang.mli  lexer.mll  parser.mly  philosophers.ml  prog.ml  prog.mli  sparkling.ml  swiss-flag.sparkling  test.sparkling  test_prog.ml
test/: Makefile  barber.sparkling  interval.sparkling  philosophers-deadlock.sparkling  philosophers.sparkling  produce-consume-naive.sparkling  producer-consumer.sparkling  readers-write-deadlock.sparkling  readers-write.sparkling  square.sparkling  swiss-flag.sparkling  torus-square.sparkling  torus-swiss-flag.sparkling  two-consumer-queue.sparkling  two-consumers.sparkling
website/: .gitignore  Makefile  dune  helper.ml  index.html  sparkling.css  web.ml
