(lang dune 2.1)
(name sparkling)

(generate_opam_files true)

(source (github mirage/ocaml-cohttp))
(authors "Samuel Mimram")
(maintainers "samuel.mimram@lix.polytechnique.fr")

(package
 (name sparkling)
 (synopsis "Perform verification of concurrent programs using syntactic regions.")
 (description "Perform verification of concurrent programs using syntactic regions.")
)
