(ocamlyacc
 (modules parser)
)

(ocamllex
 (modules lexer)
)

(library
 (name sparkling)
 (modules common prog lang parser lexer frontend)
 (wrapped false)
)

(executable
 (name sparkling)
 (modules sparkling)
 (libraries sparkling)
)

(executable
 (name philosophers)
 (modules philosophers)
)

(test
 (name test_prog)
 (modules test_prog)
 (libraries sparkling)
)
